<resources>
    <string name="app_name">Fordan</string>
    <string name="default_web_client_id">327648831945-5v1lrnv9rd3o6g15n2mb2me17s7glm1i.apps.googleusercontent.com</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registrar">Registrar</string>
    <string name="conectar">Conectar</string>
    <string name="mostrar_senha">Mostrar Senha</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuario</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cpf">Digite seu CPF</string>
    <string name="nome">Digite Seu Nome Completo</string>
    <string name="login">Login</string>
    <string name="sair">Sair</string>
    <string name="Imagem">TODO</string>
    <string name="data">Data de Nascimento</string>
    <string name="confirmar">Confirmar</string>
    <string name="email">Email</string>
    <string name="boletim">Fazer um Boletim de Ocorrencia</string>
    <string name="pensao">Solicitar Pensão Alimenticia</string>
    <string name="Medida">Solicitar Medida Provisória</string>
    <string name="preference_file_key">com.example.sharedpreferences.PREFERENCE_FILE_KEY</string>
    <string name="editar">Editar</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Indigena">Dee anho\'ī e\'y reiko</string>
    <string name="Fordan">Você não está sozinha</string>
    <string name="app">Fordan</string>
    <string name="mobile">Número do Celular</string>
    <string name="Code">Enviar Código</string>
    <string name="code">Código aqui</string>
    <string name="frente">Próximo</string>
    <string name="Info">Informações Uteis</string>
    <string name="acoes">Ações</string>
    <string name="perfil">Perfil</string>
    <string name="md">Meus Dados</string>
    <string name="familia">Familia</string>
    <string name="raca">Deseja Informa sua Raça?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="preto">Preto</string>
    <string name="pardo">Pardo</string>
    <string name="branco">Branco</string>
    <string name="amarelo">Amarelo</string>
    <string name="indigena">Indigena</string>
    <string name="quilombola">Quilombola</string>
    <string name="escola">Qual a sua Escolaridade?</string>
    <string name="mestrado">Mestrado</string>
    <string name="medioIn">Ensino Médio Incompleto</string>
    <string name="medioCom">Ensino Médio Completo</string>
    <string name="fundaCom">Ensino Fundamental Completo</string>
    <string name="supCom">Ensino Superior Completo</string>
    <string name="fundaIn">Ensino Fundamental Incompleto</string>
    <string name="quilombo">Qual seu Quilombo?</string>
    <string name="local_quilombo">Qual a localização do seu Quilombo?</string>
    <string name="povo">Qual povo indigena?</string>
    <string name="local">Qual a localização do seu povo?</string>
    <string name="reenviar_c_digo">Reenviar Código</string>

</resources>
