<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roxo"
    tools:context=".SplashActivity"
    tools:ignore="MissingDefaultResource">

    <View
        android:id="@+id/circulo2"
        android:layout_width="950dp"
        android:layout_height="950dp"
        android:layout_marginBottom="131dp"
        android:background="@drawable/circulo_bege"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <View
        android:id="@+id/circulo"
        android:layout_width="450dp"
        android:layout_height="450dp"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="500dp"
        android:background="@drawable/circulo_roxo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <TextView
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app"
        android:textColor="@color/azul"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/circulo"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="394dp"
        android:layout_marginBottom="287dp"
        android:text="@string/Fordan"
        android:textColor="@color/azul"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="456dp"
        android:layout_marginBottom="225dp"
        android:text="@string/Indigena"
        android:textColor="@color/azul"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/logos"
        android:layout_width="391dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"

        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/logos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>