<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roxo"
    tools:context=".Perfil.Perfil"
    tools:ignore="MissingDefaultResource">

    <View
        android:id="@+id/circulo2"
        android:layout_width="700dp"
        android:layout_height="700dp"
        android:background="@drawable/circulo_bege"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds" />


    <TextView
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:text="@string/perfil"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_meus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/circulo2"
        app:layout_constraintVertical_bias="0.508"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <View
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/eu2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_meus"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints,VisualLintBounds" />

    <View
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/fam2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_familia"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622"
        tools:ignore="ContentDescription,MissingConstraints,VisualLintBounds" />

    <ImageButton
        android:id="@+id/speak"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/som"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_familia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circulo2"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_meus"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:background="@color/azul"
        android:text="@string/md"
        app:layout_constraintBottom_toBottomOf="@+id/circulo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/circulo2"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintBounds" />

    <Button
        android:id="@+id/btn_familia"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginBottom="280dp"
        android:background="@color/azul"
        android:text="@string/familia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_meus"
        app:layout_constraintVertical_bias="0.933"
        tools:ignore="MissingConstraints,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
